src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Code__c</fullName>
        <label>CRM Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>97922</fullName>
                </value>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>CALLC</fullName>
                </value>
                <value>
                    <fullName>CCO</fullName>
                </value>
                <value>
                    <fullName>CDM</fullName>
                </value>
                <value>
                    <fullName>CDO</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>CEVACL</fullName>
                </value>
                <value>
                    <fullName>CEVADMC</fullName>
                </value>
                <value>
                    <fullName>CEVAEAC</fullName>
                </value>
                <value>
                    <fullName>CEVAIRC</fullName>
                </value>
                <value>
                    <fullName>CEVASC</fullName>
                </value>
                <value>
                    <fullName>CIDD</fullName>
                </value>
                <value>
                    <fullName>CLIN</fullName>
                </value>
                <value>
                    <fullName>CLINPCK</fullName>
                </value>
                <value>
                    <fullName>CLINQA</fullName>
                </value>
                <value>
                    <fullName>CLINSPPL</fullName>
                </value>
                <value>
                    <fullName>CONFER</fullName>
                </value>
                <value>
                    <fullName>CONSULT</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CSDD</fullName>
                </value>
                <value>
                    <fullName>DPU</fullName>
                </value>
                <value>
                    <fullName>ECDCM</fullName>
                </value>
                <value>
                    <fullName>ECDMEDS</fullName>
                </value>
                <value>
                    <fullName>ECDPK</fullName>
                </value>
                <value>
                    <fullName>ECDPM</fullName>
                </value>
                <value>
                    <fullName>ECDRM</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>ECGALY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closeout_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>LC-4521 : ClinicalRoles and other roles reporting</description>
        <label>CloseOut Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closeout_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closeout Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduct_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>LC-4521 : ClinicalRoles and other roles reporting</description>
        <label>Conduct Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conduct_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Average_FPI_Date__c</fullName>
        <label>Country Average FPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_LPI_Date__c</fullName>
        <label>Country LPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_LPO_Date_In_Treatment_Follow_Up__c</fullName>
        <label>Country LPO Date (In-Treatment Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_LPO_Date_Treatment__c</fullName>
        <label>Country LPO Date (Treatment)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Date__c</fullName>
        <label>Currency Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Frequency__c</fullName>
        <description>CLM-MC-CLMCMA-14430 - This field is used to store delivery frequency.</description>
        <label>Delivery Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Once [O]</fullName>
                </value>
                <value>
                    <fullName>Weekly Data - Weekly Delivery [WW]</fullName>
                </value>
                <value>
                    <fullName>Weekly Data - Monthly Delivery [WM]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Monthly Delivery [MM]</fullName>
                </value>
                <value>
                    <fullName>Monthly data - Bi-Monthly delivery [MB]</fullName>
                </value>
                <value>
                    <fullName>First month - Bi-Monthly delivery [1B]</fullName>
                </value>
                <value>
                    <fullName>Second month - Bi-Monthly delivery [2B]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Quarterly Delivery [MQ]</fullName>
                </value>
                <value>
                    <fullName>Quarterly Data - Quarterly Delivery [QQ]</fullName>
                </value>
                <value>
                    <fullName>First month - Quarterly delivery [1Q]</fullName>
                </value>
                <value>
                    <fullName>Second month - Quarterly delivery [2Q]</fullName>
                </value>
                <value>
                    <fullName>Third month - Quarterly delivery [3Q]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Half Yearly Delivery [MH]</fullName>
                </value>
                <value>
                    <fullName>Quarterly Data - Half Yearly Delivery [QH]</fullName>
                </value>
                <value>
                    <fullName>Half Yearly Data - Half Yearly Delivery [HH]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Yearly Delivery [MY]</fullName>
                </value>
                <value>
                    <fullName>Quarterly Data - Yearly Delivery [QY]</fullName>
                </value>
                <value>
                    <fullName>Half Yearly Data - Yearly Delivery [HY]</fullName>
                </value>
                <value>
                    <fullName>Yearly Data - Yearly Delivery [YY]</fullName>
                </value>
                <value>
                    <fullName>Tri-annual Data – Tri-annual Delivery [TT]</fullName>
                </value>
                <value>
                    <fullName>Weekly Data – Bi-Weekly Delivery [WB]</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Frequency_Formula__c</fullName>
        <description>CLM_MC_CLMCMA-14832: Formula field to populate related Line Item Delivery Frequency.</description>
        <formula>if(AND(Apttus_CMConfig__DerivedFromId__c != null, NOT(ISBLANK( Apttus_CMConfig__DerivedFromId__r.Data_Delivery_Frequency__c))), Apttus_CMConfig__DerivedFromId__r.Data_Delivery_Frequency__c, TEXT(Delivery_Frequency__c))</formula>
        <label>Delivery Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_with_Inflation_USD__c</fullName>
        <label>Estimated Cost (with Inflation) (USD)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_with_Inflation__c</fullName>
        <label>Estimated Cost (with Inflation)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Expense Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Expense__c</fullName>
        <label>Fixed Price Expense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Passthrough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_per_Unit__c</fullName>
        <label>Hours per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IQVIA_Line_Type__c</fullName>
        <label>IQVIA Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRM Product</fullName>
                </value>
                <value>
                    <fullName>UPT Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigational_Product__c</fullName>
        <label>Investigational Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedDRA_System_Organ_Class__c</fullName>
        <label>MedDRA System Organ Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Active_Sites__c</fullName>
        <label>Number Of Active Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Qualified_Sites__c</fullName>
        <label>Number Of Qualified Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCE_Monthly_User_Fee__c</fullName>
        <formula>OCE_Total_Monthly_Fees__c /  Apttus__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ-Del-Per User Per Month Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCE_Option_Group_Name__c</fullName>
        <formula>Apttus_CMConfig__ProductOptionId__r.Apttus_Config2__ProductOptionGroupId__r.Apttus_Config2__OptionGroupId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ-Del-Option Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Total_Monthly_Fees__c</fullName>
        <formula>OCE_Total_Yearly_Fees__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ-Del-Total Monthly Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCE_Total_Yearly_Fees__c</fullName>
        <formula>if(value(text(Apttus__AgreementId__r.O_Term_Years__c)) &gt; 0,  Apttus__NetPrice__c / value(text(Apttus__AgreementId__r.O_Term_Years__c)), Apttus__NetPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ-Del-Total Yearly Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Is_Subscription_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPQ-Del-Is Subscription Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Product_Cost__c</fullName>
        <label>CPQ-Del-Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offering_Group__c</fullName>
        <formula>TEXT(Apttus__ProductId__r.Offering_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Segment__c</fullName>
        <formula>TEXT(Apttus__ProductId__r.Offering_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <formula>TEXT(Apttus__ProductId__r.Offering_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Category_Code__c</fullName>
        <label>PS Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Res_Type__c</fullName>
        <label>PS Res Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCES</fullName>
                </value>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>BONUS</fullName>
                </value>
                <value>
                    <fullName>BSG</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>CIDD</fullName>
                </value>
                <value>
                    <fullName>CLNPH</fullName>
                </value>
                <value>
                    <fullName>CLOPS</fullName>
                </value>
                <value>
                    <fullName>CMSVC</fullName>
                </value>
                <value>
                    <fullName>CSDD</fullName>
                </value>
                <value>
                    <fullName>CSMSL</fullName>
                </value>
                <value>
                    <fullName>CTE</fullName>
                </value>
                <value>
                    <fullName>DEPOT</fullName>
                </value>
                <value>
                    <fullName>DIRCP</fullName>
                </value>
                <value>
                    <fullName>DIRCT</fullName>
                </value>
                <value>
                    <fullName>DPU</fullName>
                </value>
                <value>
                    <fullName>DSFTY</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>EIDET</fullName>
                </value>
                <value>
                    <fullName>EXPEN</fullName>
                </value>
                <value>
                    <fullName>EXPNP</fullName>
                </value>
                <value>
                    <fullName>FINAD</fullName>
                </value>
                <value>
                    <fullName>FLXBD</fullName>
                </value>
                <value>
                    <fullName>FLXBI</fullName>
                </value>
                <value>
                    <fullName>FLXCL</fullName>
                </value>
                <value>
                    <fullName>FLXCM</fullName>
                </value>
                <value>
                    <fullName>FLXDM</fullName>
                </value>
                <value>
                    <fullName>FLXPH</fullName>
                </value>
                <value>
                    <fullName>GCDM</fullName>
                </value>
                <value>
                    <fullName>GLBIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Sub_Category_Code__c</fullName>
        <label>PS Sub Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Country__c</fullName>
        <label>Pricing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Function__c</fullName>
        <label>Pricing Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Resource__c</fullName>
        <label>Pricing Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Resource_Type__c</fullName>
        <label>RM Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSU Specialist</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Senior Reviewer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Qcer</fullName>
                </value>
                <value>
                    <fullName>Lead Oversight</fullName>
                </value>
                <value>
                    <fullName>Medical Writer</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Project Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Contact Center Analyst</fullName>
                </value>
                <value>
                    <fullName>QA Trainer</fullName>
                </value>
                <value>
                    <fullName>Oversight Group Management Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Coordinator</fullName>
                </value>
                <value>
                    <fullName>Adjudication Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Account Oversight</fullName>
                </value>
                <value>
                    <fullName>CEVA Clinical Reviewer</fullName>
                </value>
                <value>
                    <fullName>CEVA Systems Support</fullName>
                </value>
                <value>
                    <fullName>Site Report Specialist</fullName>
                </value>
                <value>
                    <fullName>Standard Monitor AND DTE Site Monitor</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Standard Monitor or DTE Site Monitor</fullName>
                </value>
                <value>
                    <fullName>SSV</fullName>
                </value>
                <value>
                    <fullName>Co-monitor</fullName>
                </value>
                <value>
                    <fullName>CML</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>Programmer</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Data Team Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RM_Study_Phase__c</fullName>
        <label>RM Study Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSU_IP_Classification__c</fullName>
        <label>RSU IP Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Mgt_Platform__c</fullName>
        <description>LC-4966: Res Mgt Plaform is a task level information available in Catalog tab of UPT pricing tool and this field will have mapping.</description>
        <label>Res Mgt Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Back Data</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSU Specialist</fullName>
                </value>
                <value>
                    <fullName>Statistician</fullName>
                </value>
                <value>
                    <fullName>Senior Reviewer</fullName>
                </value>
                <value>
                    <fullName>Programmer</fullName>
                </value>
                <value>
                    <fullName>Medical Writer</fullName>
                </value>
                <value>
                    <fullName>SDTM</fullName>
                </value>
                <value>
                    <fullName>GRIDDS</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Project Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Contact Center Analyst</fullName>
                </value>
                <value>
                    <fullName>QA Trainer</fullName>
                </value>
                <value>
                    <fullName>Oversight Group Management Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Coordinator</fullName>
                </value>
                <value>
                    <fullName>Adjudication Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Account Oversight</fullName>
                </value>
                <value>
                    <fullName>CEVA Clinical Reviewer</fullName>
                </value>
                <value>
                    <fullName>CEVA Systems Support</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>Site Report Specialist</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>CML</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Data Team Lead</fullName>
                </value>
                <value>
                    <fullName>Data Operations Coordinator</fullName>
                </value>
                <value>
                    <fullName>Therapeutic Medical Advisor</fullName>
                </value>
                <value>
                    <fullName>Clinical Data Coordinator</fullName>
                </value>
                <value>
                    <fullName>Validation Team Lead</fullName>
                </value>
                <value>
                    <fullName>Lead Build Programmer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule1_Id__c</fullName>
        <description>CLM-MC-CLMCMA-3848 - Id of the schedule1 attachment record</description>
        <label>Schedule1 Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_ATC_OTC_Codes__c</fullName>
		<description>CLMCMA-14014: To Store Selected ATC OTC Hierarchy Codes for Market Share in Agreementlineitem.</description>
        <inlineHelpText>Separated by Semicolon</inlineHelpText>
        <label>Selected ATC/OTC Codes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Startup_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>LC-4521 : ClinicalRoles and other roles reporting</description>
        <label>Startup Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Startup_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Startup Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Std_Price_w_Infl_USD__c</fullName>
        <label>Std Price w/ Infl. (USD)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Price_w_Infl__c</fullName>
        <label>Std Price w/ Infl.</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_w_Inflation_Bid_USD__c</fullName>
        <label>Total Price w/ Inflation (Bid) USD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>